--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Danielle Robitshek",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "lite-server": "^2.5.4",
+    "node-sass": "^4.14.1"
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
