title and saying to index.html

--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "lite": "lite-server",
     "scss": "node-sass -o css/ css/",
-    "start": "npm run lite",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run watch:all",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
+    "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\""
   },
   "author": "Danielle Robitshek",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "onchange": "^7.0.0",
+    "parallelshell": "3.0.1"
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "bootstrap-social": "^5.1.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
